--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-PT">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WEELOVE 2025</title>
+    <title>WEE MARKETING | Estratégia e Conteúdo Digital</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,20 +12,17 @@
     <style>
       html {
         scroll-behavior: smooth;
-        scroll-padding-top: 100px; /* Offset for fixed header */
-        -ms-overflow-style: none;  /* IE and Edge */
-        scrollbar-width: none;  /* Firefox */
+        scroll-padding-top: 100px;
+        -ms-overflow-style: none;
+        scrollbar-width: none;
       }
-      
-      /* Hide scrollbar for Chrome, Safari and Opera */
       ::-webkit-scrollbar {
         display: none;
       }
-
       body {
         font-family: 'Space Grotesk', sans-serif;
-        background-color: #FFFFFF; /* White base */
-        color: #213D7A; /* Dark Blue text */
+        background-color: #FFFFFF;
+        color: #213D7A;
         overflow-x: hidden;
       }
       h1, h2, h3, .font-heading {
@@ -43,7 +41,6 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
 </head>
   <body>
     <div id="root"></div>
